# emoArc

./: .gitignore  DATAPROC_GUIDE.md  EXPLAINABILITY_GUIDE.md  INSTALL.md  README.md  RECOMMENDATION_SYSTEM.md  TESTING.md  analyze_gutenberg_sample.py  app.py  book_recommender.py  bootstrap.sh  collaborative_recommender.py  demo.py  explainable_recommender.py  main.py  pyproject.toml  requirements.txt  test_author_extraction.py  test_local.sh  test_roberta_romeo_juliet.py  test_single_book.py
notebooks/: gutenberg_validation.ipynb  single_book_analysis.ipynb
output/: README.md
src/: __init__.py  core.py  data.py  emotion_scorer.py  features.py  lexicon_loader.py  model_persistence.py  preprocess.py  recommender.py  text_preprocessor.py  topic_modeling.py  trajectory_analyzer.py  word_embeddings.py
src/analysis/: __init__.py
web/: README.md  db.sqlite3  manage.py
web/books/: admin.py  models.py  urls.py  views.py
web/books/management/commands/: load_books.py
web/books/migrations/: 0001_initial.py  0002_book_bookshelves.py
web/books/templates/books/: base.html  book_detail.html  compare.html  compare_select.html  data_browser.html  genre_explorer.html  home.html  methodology.html  recommendations.html
web/books/templatetags/: book_filters.py
web/emoarc/: asgi.py  settings.py  urls.py  wsgi.py
