[project]
name = "emoarc"
version = "0.1.0"
description = "Emotion Trajectory Analysis and Recommendation System for Project Gutenberg Books"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyspark>=4.0.1",
    "nltk>=3.8",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
    "wordcloud>=1.9.0",
]
